# xmonad-log-applet

./: .gitignore  AUTHORS.md  LICENSE  Makefile.am  README.md  configure.ac  main.c  org.gnome.panel.XmonadLogApplet.panel-applet.in  org.gnome.panel.applet.XmonadLogAppletFactory.service.in  org.mate.panel.XmonadLogApplet.mate-panel-applet  org.mate.panel.XmonadLogApplet.mate-panel-applet.in  org.mate.panel.applet.XmonadLogAppletFactory.service.in  org.xmonad.Log.panel-applet.in  org.xmonad.XmonadLogAppletFactory.service.in  xmonad-log-applet.desktop.in  xmonad-log-applet.schema  xmonad-log-applet.server.in  xmonad.hs
